<resources>
    <string name="app_name">MovieApp</string>
    <string name="popular_movie_type">popular</string>
    <string name="top_rated_movie_type">top_rated</string>
    <string name="playing_movie_type">now_playing</string>

    <string name="first_popular_movie">Hottest movie</string>

    <string name="movie_category_popular">Popular</string>
    <string name="movie_category_top_rated">Top Rate</string>

    <string name="error_msg">Sorry! Couldn\'t fetch movies.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="tap_to_reload">Tap to reload</string>

    <string name="nav_top_rated_label">Top Rated Movies</string>
    <string name="nav_current_playing_label">Playing Movies</string>
    <string name="nav_latest_label">Latest Movies</string>
    <string name="nav_upcoming_label">Upcoming Movies</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="first_movie_hit">BEST</string>

    <string name="action_share">Share</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query_videos">videos</string>

    <!-- Detail Activity Labels-->
    <string name="genre_label">Genres</string>
    <string name="release_date_label">Release Date</string>
    <string name="runtime_label">Runtime</string>
    <string name="original_language_label">Original Language</string>
    <string name="overview_label">Overview</string>
    <string name="trailer_label">Trailers</string>
    <string name="title_label">Title</string>
    <string name="min_label">min</string>
    <string name="status_label">Status</string>
    <string name="search">Search</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="no_trailer_message">No Trailer</string>
    <string name="enter_the_title">Search title i.e. \"Spider man\"</string>

    <!-- Login Labels -->

    <string name="new_account_label">NEED A NEW ACCOUNT?</string>
    <string name="email">Email…</string>
    <string name="display_name">Name</string>
    <string name="password">Password…</string>
    <string name="log_out_menu_label">Log Out</string>
    <string name="create_account">CREATE</string>
    <string name="email_login">Email…</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">LOGIN</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
    <string name="register">CREATE</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="sign_in_label">Signed in as</string>
    <string name="or_login_with">or login with</string>

</resources>
