<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.s522050.movieapp.MovieDetail">

    <include layout="@layout/detail_app_bar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="#000000">

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:paddingStart="@dimen/detail_padding"
                    android:paddingLeft="@dimen/detail_padding"
                    android:paddingEnd="@dimen/detail_padding"
                    android:paddingRight="@dimen/detail_padding"
                    tools:text="The Hunger Games: Mockingjay - Part 1"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trailer_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:padding="@dimen/detail_padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/trailer_label"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/no_trailer_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:text="@string/no_trailer_message"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <com.google.android.youtube.player.YouTubePlayerView
                        android:id="@+id/trailer"
                        android:layout_marginTop="@dimen/detail_padding"
                        android:layout_width="@dimen/youtube_view_width"
                        android:layout_height="@dimen/youtube_view_height" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:padding="@dimen/detail_padding"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/status_label"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Released" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/original_language_label"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="en" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/release_date_label"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2017-09-05" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/runtime_label"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="120 min" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginBottom="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:padding="@dimen/detail_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/genre_label"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Action,Horror,Science" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/placeholder_grey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/overview_label"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="In a small town in Maine, seven children known as The Losers Club come face to face with life problems, bullies and a monster that takes the shape of a clown called Pennywise." />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
